# rubiks-solver

./: CMakeLists.txt  Makefile  README.md  benchmark.cpp  main.cpp  sc.txt
include/: coordinate.h  cube.h  moves.h  persistence.h  solver.h  table_manager.h
src/: coordinate.cpp  cube.cpp  solver.cpp  table_manager.cpp
